segunda   se puso como variable @string el texto del boton para quitar error se agrego el uso de kotlin para ajustar las variables usando kotlin se agregaron los campos de mail, phone y se cambio el campo de mensaje para agarrar el contenido de la variable string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MiPrimerKotlinPC</string>
+    <string name="buton_aplica">Aplicar</string>
+    <string name="hint_mail">Email</string>
+    <string name="hint_phone">Teléfono</string>
+    <string name="hint_message">Introduzca su mensaje</string>
 </resources>
